--- a/data/pages/game-programmer/projects.json
+++ b/data/pages/game-programmer/projects.json
@@ -1,8 +1,14 @@
 [
   {
-    "name": "Fighter Journey",
+    "name": {
+      "ar": "رحلة المقاتل",
+      "en": "Fighter Journey"
+    },
     "url": "https://assayyaad.itch.io/fighter-journey",
     "date": "2025-05",
-    "description": "Solo developed a 2D fighting game prototype using Unity and C#. The game features a simple combat and skill systems."
+    "description": {
+      "ar": "قمت بتطوير نموذج أولي للعبة قتال ثنائية الأبعاد بمفردي باستخدام Unity و C#. تتميز اللعبة بنظام قتال ومهارات بسيط.",
+      "en": "Solo developed a 2D fighting game prototype using Unity and C#. The game features a simple combat and skill systems."
+    }
   }
 ]
