تغيير اسم url لlink في ملفات البيانات

--- a/data/pages/game-programmer/projects.json
+++ b/data/pages/game-programmer/projects.json
@@ -4,7 +4,7 @@
       "ar": "رحلة المقاتل",
       "en": "Fighter Journey"
     },
-    "url": "https://assayyaad.itch.io/fighter-journey",
+    "link": "https://assayyaad.itch.io/fighter-journey",
     "date": "2025-05",
     "description": {
       "ar": "قمت بتطوير نموذج أولي للعبة قتال ثنائية الأبعاد بمفردي باستخدام Unity و C#. تتميز اللعبة بنظام قتال ومهارات بسيط.",
