--- a/data/pages/game-programmer/projects.json
+++ b/data/pages/game-programmer/projects.json
@@ -41,6 +41,7 @@
       "en": "TicTacToe With Odin & SDL2"
     },
     "link": "https://assayyaad.itch.io/xo",
+    "banner": "https://img.itch.zone/aW1nLzIwMTAyNDczLnBuZw==/347x500/LjqmUK.png",
     "date": "2025-02",
     "description": {
       "ar": "لعبة تيك تاك تو بسيطة تم تطويرها باستخدام أودين وSDL2",
@@ -53,6 +54,7 @@
       "en": "Coin Effects Tools"
     },
     "link": "https://assayyaad.itch.io/riyal-coin",
+    "banner": "https://img.itch.zone/aW1nLzIwMTMwMTcwLnBuZw==/original/EdipF2.png",
     "date": "2025-03",
     "description": {
       "ar": "مجموعة من الأدوات لإنشاء تأثيرات العملات في الألعاب",
@@ -65,6 +67,7 @@
       "en": "Village Warriors"
     },
     "link": "https://assayyaad.itch.io/village-warriors",
+    "banner": "https://img.itch.zone/aW1hZ2UvMTI3MTIwOC8yMDkxNDk1Ny5wbmc=/347x500/ppgwXC.png",
     "date": "2021-04",
     "description": {
       "ar": "لعبة تقمص أدوار مغامرات مع نظام قتال معقد يعتمد على الأدوار",
@@ -77,6 +80,7 @@
       "en": "Grid Horror"
     },
     "link": "https://assayyaad.itch.io/grid-horror",
+    "banner": "https://img.itch.zone/aW1hZ2UvMzM1NTg2Mi8yMDAzNTM2MC5wbmc=/347x500/0ln3PL.png",
     "date": "2025-02",
     "description": {
       "ar": "لعبة رعب بسيطة مع خريطة شبكية تم إنشاؤها إجرائيًا.",
@@ -89,6 +93,7 @@
       "en": "Chicken Out"
     },
     "link": "https://assayyaad.itch.io/chicken-out",
+    "banner": "https://img.itch.zone/aW1nLzY3NDQxNTgucG5n/original/ybPEq6.png",
     "date": "2021-06",
     "description": {
       "ar": "لعبة قتال متعددة اللاعبين عبر الإنترنت لـ 4 لاعبين مع أسلحة حجر-ورقة-مقص وعناصر تعزيز القوة",
